# cookie-cutter-data-science

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  makefile  pyproject.toml
{{ cookiecutter.repo_name }}/.devcontainer/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  devcontainer.json  docker-compose.yaml
{{ cookiecutter.repo_name }}/notebooks/: demo.ipynb  temp.ipynb
{{ cookiecutter.repo_name }}/scripts/: install.sh
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package_name }}/: config.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: config.py
