[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = ""
authors = ["TJ"]
packages = [
    { include = "{{ cookiecutter.python_package_name }}", from = "src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
pydantic-settings = "2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
